update faq.tt and leaders.tt

--- a/root/templates/member/leaders.tt
+++ b/root/templates/member/leaders.tt
@@ -1,25 +1,49 @@
-		<h2>LEADER INFORMATION</h2>
-<h3>LEADER POLICY</h3>
-<p>Leaders and their co-leaders often have a significant level of responsibility for the children in their classes.</p>
-<p>It is expected that Leaders and the co-leaders will have the right to set behavioral guidelines in their program and have them adhered to. If these guidelines are not followed by one or more of the children in the class the instructor/s have the option to ask this child/children to leave the class. This is one reason that we need to have a responsible adult onsite and available for every child attending a class. If a child‚Äôs responsible adult has an issue or problem with the leaders needs in this area, we would ask that they discuss these issues with the leader or with a member of the Board or the Interpersonal Relationship Committee after the class time.  At the beginning of the session leaders or co-leaders should communicate their expectations regarding behavior and parental involvement.</p>
-<p>The leader or co-leader of a class may not act in loco parentis to another families child/ren unless pre-arranged and pre-approved by the board.</p>
-<h3>MORE INFORMATION FOR PROGRAM LEADERS</h3>
-<p>Leaders/Co-leaders are responsible for all aspects of their programs. This includes planning program content; set up and clean up; collecting material fees; leading and or/supervising the smooth running of the program; and contacting parents in the case of cancellation or change.  Leaders of programs are responsible for closing the space when the program is over. This includes: cleaning, turning off lights, closing windows, locking the door, and returning the key to the main space if needed. It is suggested that leaders ask for parents to help with cleaning, possibly on a rotating schedule. Leaders of programs held in the conference room will need to consult the conference room cleaning guidelines, posted on the bulletin board. Leaders of programs held in the gym can consult the guidelines posted on the wall, and in addition are asked to remove items left behind in the gym by class participants. These can go in the NLLC lost and found box in the main space or to the INHS office if they are thought to belong to a member of another group.</p>
-<p>You may use a sign in sheet at each class meeting to manage information about participating children&#8217;s responsible adults acting in loco parentis. This could include columns for the child&#8217;s name, parent or responsible adult, and the adults location ON SITE (gym, playground, main space, etc.) It could also include a place for a cell phone number of the parents or responsible adult- as this can be a quick way to reach them if they are in another location ON SITE.</p>
-<h3>CONFERENCE ROOM CLEANING GUIDELINES</h3>
-<ol>
-<li>Tables: set-up tables in rectangular formation. (There will be a diagram placed on the inside door of the closet housing the vacuum. The diagram on the wall in the conference room should be disregarded.)</li>
-<li>Chairs: Place chairs at tables. All other chairs should be placed against the wall opposite the entrance door. These extra chairs can be lined up against this wall or can be stacked.</li>
-<li>Tables should be wiped down after every program as needed. NO CUTTING ON TABLES!  Simple Green as well as Citr-isolv solutions, rags, a blue dish sponge, baking soda, and a small clear plastic container to hold water for cleaning are in the closet, the same closet where the vacuum is housed.</li>
-<li>Chairs should be wiped down as well, as needed.</li>
-<li>Vacuum as needed.</li>
-<li>Empty vacuum cleaner into garbage as needed.</li>
-<li>Empty garbage when full and place in dumpster (the dumpster is next to the playground).</li>
-<li>Empty garbage when food is placed in the garbage even if it is not full, because of fruit flies.</li>
-<li>INHS supplies us with garbage bags for the conference room. When out of garbage bags we need only notify them.</li>
-</ol>
-<p>INHS rents us the conference room at a much-reduced rate because we agreed to clean it ourselves. With this in mind, I am asking that program leaders using the conference room follow the table set-up and cleaning guidelines as recommended to us by INHS.</p>
-<p>To accomplish this, please allow enough time at the end of your program to administer these duties when needed. Ask parents to help in order to reduce the time needed to accomplish these tasks. I highly recommend leaders have a sheet for parents to sign-up and take turns helping with the tables and chairs and cleaning of this room.</p>
-<p>Leaving the cleaning for the last NLLC program of the day does not always work. If for some reason the last program is cancelled for that day or the last program has completed their scheduled sessions and no longer is the last program of the day then this room does not get cleaned. INHS uses this room for luncheons making it important for NLLC‚Äôs morning programs to keep this room clean.</p>
-<p>If you have any questions or thoughts on the matter please call me at 564-5044 or e-mail me at <a href="mailto:dgaydos@twcny.rr.com">dgaydos@twcny.rr.com</a><a />
-</p>
+<h2>LEADER INFORMATION</h2>
+<h3>Leader Policy</h3>
+
+<p>Leaders and co-leaders are responsible for all aspects of their programs. This includes planning program content; set up and clean up; collecting material fees; leading and/or supervising the smooth running of the program; and contacting parents in the case of cancellation or change.</p>
+
+<p>Leaders and their co-leaders often have a significant level of responsibility for the children in their classes. Therefore, it is expected that leaders and co-leaders will have the right to set behavioral guidelines in their program and have them adhered to. If these guidelines are not followed by one or more of the children in the class the instructors have the option to ask this child/children to leave the class. This is one reason that we need to have a responsible adult onsite and available for every child attending a class. If a child’s responsible adult has an issue or problem with the leader’s needs in this area, we would ask that they discuss these issues with the leader or with a member of the Board after the class time.</p>
+<p>At the beginning of the session leaders or co-leaders should communicate their expectations regarding behavior and parental involvement.</p>
+<p>The leader or co-leader of a class may not act in loco parentis to another family’s children unless pre-arranged and pre-approved by the board.</p>
+<p>Only two co-leaders are allowed per program, unless the board grants an exception.</p>
+
+
+<h3>Suggestions to Leaders:</h3>
+<p>You may use a sign in sheet at each class meeting to manage information about participating children's responsible adults acting in loco parentis. This could include columns for the child's name, and parent or responsible adult. It could also include a place for a cell phone number of the parents.</p>
+<p>The board encourages all leaders to review youth agreements and other NLLC policies  as applicable to their classes at the first meeting of the session, as well as requirements for the particular program.</p>
+<p>Any leader may contact a board member for help with any problem or concern relating to programs, policies, or other concern relating to NLLC at any time if the following suggestions and support are not helpful.</p>
+
+<h3>What to do when a member is not following a guideline:</h3>
+<p>A recommended step for a  program leader who observes a member who is not following a NLLC guideline is for the the leader to remind them gently of the guideline. If the member is a child, a first step may be to speak with the child directly, a second to speak with the child's parent. This may be enough to avoid future issues.</p>
+<p>Another option is to ask another member parent to approach the member in question. A program support volunteer (see below) could assist a leader with this as well.</p>
+<p>If a leader is having a problem with a member who is not following NLLC guidelines after being reminded, if a participant has difficulty leaving the program when asked in accordance with the leader policy, or there is any other reason the situation is uncomfortable, the leader may contact a board member for help. The board has developed a procedure for following up with members who are having repeated difficulty in following the guidelines, and will send that to any leader on request.</p>
+
+<h3>Additional Support Available for Leaders:</h3>
+<p>Program support volunteers- member volunteers  are available to attend either the first meeting of a program, or when needed, to assist a leader with responding to behaviors in classrooms. These volunteers can meet with the leader before the session started to discuss strategies for helping during the program.</p>
+<p>Program contracts - Assistance is available for  leaders of programs in developing contracts to use with participants and/or their parents.  The purpose of these contracts would be to clarify the expectations in a particular program, ask the participant and/or parents to commit to these expectations, and to clarify consequences for a participant who is not able to meet those expectations.</p> 
+<p>Mentoring for leaders in developing group guidelines</p>
+<p>Contact any  board member to get assistance with the three options above.</p>
+
+<h3>Clinton Hall Cleaning Guidelines</h3>
+<p>All members are expected to clean up the space which they are occupying, including any kitchen mess generated and to assist in removal of trash, when cans are full.</p>
+<p>Each leader/co-leader is expected to supervise clean up after each class. Leaders are encouraged to ask other participants, including children, for help with clean up.</p>
+<p>Please aim to leave all classrooms, waiting areas, and the kitchen cleaner when you leave than it was when you arrived.  Expect to spend about 5 to 15 minutes at the end of your class to tidy up so that this is done prior to the next group arriving.</p>
+<h3>Cleaning Includes:</h3>
+<p>Vacuum</p>
+<p>Wipe surfaces</p>
+<p>Remove all trash and recycling.</p>
+<p>Return all furniture, supplies, toys, books, etc, to its place.</p>
+<h3>In addition, programs at the end of the day must make sure that:</h3>
+<p>All windows are closed</p>
+<p>Lights are off</p>
+<p>Heat or A/C is turned down or off</p>
+<p>Trash can(s) are emptied</p>
+<p>Both doors are locked</p>
+<p>You can determine whether your program is at the end of the day by consulting the online calendar, or the calendar posted on the main space bulletin board. You will also receive an email from the NLLC Board advising you that you are the last scheduled class of the day.</p>
+<p>Please remember that any program may become the last program of the day, due to cancellations. If the leader of the next class has not arrived, after your program has ended, please make sure that the windows are closed, lights are off, trash is emptied, heat adjusted, and all doors are locked before you leave the building.</p>
+<p>The space will be cleaned by one of our members at the end of each week. Please consider the condition of our space at the end of the week.</p>
+<p>Vacuums and cleaning supplies are available.  If you notice that required supplies are running low, please leave notice on the main board or contact the Resource Coordinator.</p>
+
+<h3>Gym Cleaning</h3>
+<p>Leaders of programs held in the gym can consult the closing guidelines posted on the wall, and in addition are asked to remove items left behind in the gym by class participants. These can go in the NLLC lost and found box at Clinton Hall or to the INHS office if they are thought to belong to a member of another group.</p>
